--- a/src/app/components/admin/main-admin/main-admin.component.scss
+++ b/src/app/components/admin/main-admin/main-admin.component.scss
@@ -52,6 +52,10 @@
     height: 100% !important;
 }
 
+.description-panel {
+    margin-right: 2%
+}
+
 .desktop-tabs {
     padding: 0% 30% 0% 30%;
 }
