--- a/src/app/components/notification/list-notification/list-notification.component.scss
+++ b/src/app/components/notification/list-notification/list-notification.component.scss
@@ -36,6 +36,13 @@
     font-size: 1.3em;
 }
 
+.title-sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 100000;
+}
+
 @media(max-width: 900px) {
     .user-select-contenet {
         margin: 1% 1% 1% 1%;
