--- a/src/app/components/admin/list-buyer-admin/list-buyer-admin.component.html
+++ b/src/app/components/admin/list-buyer-admin/list-buyer-admin.component.html
@@ -61,6 +61,7 @@
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
 </ion-fab>
+<!-- Solo vendedor y asesor -->
 <ion-footer *ngIf="(user.type === 'adviser' || user.type === 'seller') && sales">
   <ion-toolbar>
     <ion-buttons slot="end">
