--- a/src/app/components/adviser/new-edit-adviser/new-edit-adviser.component.html
+++ b/src/app/components/adviser/new-edit-adviser/new-edit-adviser.component.html
@@ -85,6 +85,10 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
+              <div>
+                <button mat-raised-button color="primary" (click)="searchBuyers()">Búsqueda Avanzada</button>
+              </div>
+
             </div>
 
           </div>
