--- a/src/app/components/buyer/event-detail-buyer/event-detail-buyer.component.html
+++ b/src/app/components/buyer/event-detail-buyer/event-detail-buyer.component.html
@@ -9,7 +9,8 @@
   </ion-toolbar>
 </ion-header> -->
 <ion-header>
-  <app-menu-general [isMenuButton]="'back'" [colorMenuButton]="'white'" [titleMenu]="'Eventos'" [buttonUser]="'person'"></app-menu-general>
+  <app-menu-general [buttonNotification]=true [isMenuButton]="'back'" [colorMenuButton]="'white'" [titleMenu]="'Eventos'"
+    [buttonUser]="'person'"></app-menu-general>
 </ion-header>
 <ion-content padding>
   <!-- Toggles in a List -->
