--- a/src/app/components/buyer/ofert-buyer/ofert-buyer.component.html
+++ b/src/app/components/buyer/ofert-buyer/ofert-buyer.component.html
@@ -9,7 +9,8 @@
   </ion-toolbar>
 </ion-header> -->
 <ion-header>
-  <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Ofertas'" [buttonUser]="'person'"></app-menu-general>
+  <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Ofertas'" [buttonUser]="'person'"
+    [buttonNotification]=true></app-menu-general>
 </ion-header>
 <ion-content padding>
   <!-- cargar -->
