--- a/src/app/components/buyer/inter-prop-buyer/inter-prop-buyer.component.html
+++ b/src/app/components/buyer/inter-prop-buyer/inter-prop-buyer.component.html
@@ -9,7 +9,8 @@
   </ion-toolbar>
 </ion-header> -->
 <ion-header>
-  <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Lista de Deseos'" [buttonUser]="'person'"></app-menu-general>
+  <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Lista de Deseos'" [buttonUser]="'person'"
+    [buttonNotification]=true></app-menu-general>
 </ion-header>
 <ion-content padding>
   <ng-container *ngIf="isLoad; then thenTemplate; else elseTemplate"></ng-container>
