--- a/src/app/components/buyer/list-prop-buyer/list-prop-buyer.component.html
+++ b/src/app/components/buyer/list-prop-buyer/list-prop-buyer.component.html
@@ -9,7 +9,8 @@
   </ion-toolbar>
 </ion-header> -->
 <ion-header>
-  <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Propiedades'" [buttonUser]="'person'"></app-menu-general>
+  <app-menu-general [buttonNotification]=true [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Propiedades'"
+    [buttonUser]="'person'"></app-menu-general>
 </ion-header>
 <ion-content padding>
   <!-- cargar o no -->
